<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data_diri"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ayo_isi_data_diri_dulu"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/angkatanEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/angkatan" />

            <EditText
                android:id="@+id/tanggalMasukEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/tanggal_masuk"
                android:onClick="showDatePickerDialog" />

            <EditText
                android:id="@+id/nimEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/nomor_induk_mahasiswa" />

            <EditText
                android:id="@+id/fakultasEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/fakultas" />

            <EditText
                android:id="@+id/programStudiEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/program_studi" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <ImageView
            android:id="@+id/panahKanan"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="27dp"
            android:src="@drawable/panahkanan" />

    </LinearLayout>

</RelativeLayout>