<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data_diri"
            android:textColor="@color/orange"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ayo_isi_data_diri_dulu"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/namaAsliEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/nama_asli" />

            <EditText
                android:id="@+id/alamatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/alamat" />

            <EditText
                android:id="@+id/tanggalLahirEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/tanggal_lahir"
                android:onClick="showDatePickerDialog" />

            <EditText
                android:id="@+id/genderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="23dp"
                android:hint="@string/gender" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/panahKiri"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_gravity="start"
                android:layout_marginStart="27dp"
                android:src="@drawable/panahkiri" />

            <Button
                android:id="@+id/selesai"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginStart="230dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button_orange"
                android:text="@string/selesai"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>